Added an Auto Updater
Added an Auto Updater and workDir
No major bug found

--- a/lang/en-us.lang
+++ b/lang/en-us.lang
@@ -41,3 +41,8 @@ packSaveOptionsIndication|Separate all items by "," in all text boxes.
 packSaveSaveButton|Save
 packSaveUnknownversion|Unknown version
 packSaveUnknownMods|No mods list avalible
+updateTitle|New update avalible !
+updateSkip|Skip this update
+updateDisable|Disable updates
+updateDownload|Download
+updateCancel|Cancel
