Update from v0.9.3 to 0.9.4
Added only a text line to test Update feature, just for fun

--- a/lang/en-us.lang
+++ b/lang/en-us.lang
@@ -46,3 +46,4 @@ updateSkip|Skip this update
 updateDisable|Disable updates
 updateDownload|Download
 updateCancel|Cancel
+testForUpdate|This text is only there to test the update system
