--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,26 +1,29 @@
-MCMM v0.9.5 changelog !
+MCMM v0.9.6 changelog !
 
 bug fixes:
-- Bug fix when trying to save pack without any mods or config folder (for vanilla only users)
-- Deletion title not showing up (the "Sure ?")
-- Small text line in settings popup breaking everything
-- Various optimizations (removed useless code and stuff)
+- I don't know, just optimizations...
+(no any bug found within my code for now)
 
 features:
 - Save packs without any fear and bug (for now)
-  - Added loader entry
-  - Increased stability when some files/folders are missing
 
 - Load packs (no backup for now, be careful !)
-  - Increased stability when some files/folders are missing
 
 - Auto updater (if activated in settings)
-  - Increased stability
-  - Added an option to force update if skipped
+
+- Added Import feature !
+ - Load a pack from a '.mcmp' (basically a zip file)
+ - Currently stable for now (I hope)
 
 - List all packs, their versions, and loaders
+
+The importing feature will be useful when you are going to get the export feature...
+Hope you still enjoy it for now !
 
 If you find any bug or feature, contact me here:
 https://github.com/M4NIK0/MCModManager/
 
-Thanks for reading, se you next time for MCMM v0.9.6 !
+Thanks for reading, se you next time for MCMM v0.9.7 !
+Even if it's short, a few features are going to come in the next update !
+
+- Maniko
